<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">PhotoContest</string>
    <string name="login">Login</string>
    <string name="emailid">Email ID</string>
    <string name="passwordin">********</string>
    <string name="or">OR</string>
    <string name="facebooklogin">Sign in with FaceBook</string>
    <string name="foregetpassword">Forgot password?</string>
    <string name="createaccount">Create Account</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="facebookappid">439142796266813</string>
    <string name="facebook_app_name">PhotoContent</string>
    <string name="adUnitId">ca-app-pub-7552428963008526/7198945097</string>

    <string name="gps_not_enabled_go2_settings">GPS not Enabled go to Settings</string>
    <string name="GPS_settings">GPS_Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Settings</string>
    <string name="facebooksecretkey">3464dbf4caf02924fa33521232237001</string>
    <string name="app_id">355198514515820</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="google_APi_AutoCompletetxt_key">AIzaSyDw4a3iFGDvnHexMGF53nks0-q2H8-AC-w</string>

    <string name="mail_feedback_email">blisslogixgame@gmail.com</string>
    <string name="subjectNote"></string>
    <string name="mail_feedback_message">Please give your feed back</string>
    <string name="title_send_feedback">Photo Contest Feedback</string>
</resources>
